- Add back scrollbars that [were hidden when trying to fix another   bug](https://github.com/wekan/wekan/pull/2132/commits/f7c6b7fce237a6dbdbbd6d728cfb11ad3f4378eb).
Thanks to xet7 !

Closes #2134

--- a/client/components/swimlanes/swimlanes.styl
+++ b/client/components/swimlanes/swimlanes.styl
@@ -53,7 +53,6 @@
 .list-group
   flex-direction: row
   height: 100%
-  overflow: hidden
 
 swimlane-color(background, color...)
   background: background !important
